--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: dart_irc_bot
 version: 0.0.1
 description: A simple console application.
-#dependencies:
-#  foo_bar: '>=1.0.0 <2.0.0'
+dependencies:
+  http: any
