--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,6 @@ dependencies:
   cleverbot: 0.1.0
   xml: any
   markov_dart: 0.1.0
-  googleapis: any
+  googleapis: 0.39.0
   googleapis_auth: any
   fortune: any
