--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,7 +3,7 @@
     "configurations": [
         {
             "name": "Dart command line",
-            "type": "dart-cli",
+            "type": "dart",
             "request": "launch",
             "program": "${workspaceRoot}/bin/main.dart"
         }
