--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: dart_irc_bot
-version: 0.0.1
+version: 0.1.0
 description: A simple console application.
 dependencies:
-  http: any
-  cleverbot: 0.1.0
-  xml: any
-  markov_dart: 0.1.0
-  googleapis: 0.40.0
-  googleapis_auth: any
-  fortune: any
-  darksky_weather: 0.1.1
+  http: ^0.12.0+1
+  cleverbot: ^0.2.1
+  xml: ^3.2.5
+  markov_dart: ^0.2.0
+  googleapis: ^0.52.0+1
+  googleapis_auth: ^0.2.6
+  fortune: ^0.1.0
+  darksky_weather: ^1.1.0
